[package]
name = "snowrl"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"

# exclude = [""]
# keywords = ["book", "ssg", "asciidoc"]
# license = "MIT"
# repository = "https://github.com/toyboot4e/snowrl"
# description = ""

[workspace]
members = [
    "crates/snow2d/xdl",
    "crates/rlbox",
    "crates/grue2d",
    "crates/plugins",
]
exclude = [
    "crates/snow2d/rokol",
]

[dependencies]
rokol = { path = "crates/snow2d/rokol", features = ["glcore33", "impl-gfx", "use-sdl2", "use-fontstash"] }
snow2d = { path = "crates/snow2d" }
rlbox = { path = "crates/rlbox" }
grue2d = { path = "crates/grue2d" }
plugins = { path = "crates/plugins" }

glam = "0.11.2"
tiled = "0.9.3"

log = "0.4.11"
env_logger = "0.8.2"
anyhow = "1.0.37"
thiserror = "1.0.21"

serde = { version = "1.0.120", features = ["derive"] }
ron = "0.6.4"
image = "0.23.13"
sdl2 = "0.34.3"

[build-dependencies]
convert_case = "0.4.0"

