[package]
name = "snowrl"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"

# exclude = [""]
# keywords = ["book", "ssg", "asciidoc"]
# license = "MIT"
# repository = "https://github.com/toyboot4e/snowrl"
# description = ""

[workspace]
members = [
    "crates/core",
    "crates/model",
    "crates/view",
    "crates/gui",
]

exclude = [
    "crates/snow2d",
    "crates/snow2d/crates/xdl",
    "crates/snow2d/crates/rokol",
]

[features]
default = ["sdl2", "use-imgui"]
use-imgui = ["imgui", "gui/use-imgui"]

[dependencies]
rokol = { path = "crates/snow2d/crates/rokol/rokol", features = ["impl-gfx", "glcore33", "sdl2", "fontstash"] }
snow2d = { path = "crates/snow2d" }
gui = { path = "crates/gui", feature = ["use-imgui"] }
imgui = { version = "0.7.0", optional = true }

glam = "0.16.0"
tiled = "0.9.5"

log = "0.4.14"
env_logger = "0.8.4"
anyhow = "1.0.41"
thiserror = "1.0.25"

serde = { version = "1.0.126", features = ["derive"] }
ron = "0.6.4"
image = "0.23.14"
sdl2 = { version = "0.34.5", optional = true }

[patch.'https://github.com/toyboot4e/rokol']
rokol = { path = "crates/snow2d/crates/rokol/rokol", features = ["impl-gfx", "glcore33", "sdl2", "fontstash"] }

[build-dependencies]
convert_case = "0.4.0"

