[package]
name = "core"
version = "0.1.0"
edition = "2018"

[features]
use-imgui = ["imgui", "snow2d/use-imgui"]

[dependencies]
snow2d = { path = "../snow2d" }
imgui = { version = "0.7.0", optional = true }
serde = "1.0.127"

auto_ops = "0.3.0"
derivative = "2.2.0"
dyn-clone = "1.0.4"
log = "0.4.14"

