[package]
name = "grue2d"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rokol = { path = "../snow2d/rokol", features = ["glcore33"] }
snow2d = { path = "../snow2d" }
rlbox = { path = "../rlbox" }
hot_crate = { path = "hot_crate" }

image = "0.23.12"
glam = { version = "0.11.2", features = ["bytemuck"] }
tiled = "0.9.3"

log = "0.4.11"
env_logger = "0.8.2"
anyhow = "1.0.37"
thiserror = "1.0.21"

auto_ops = "0.1.0"
bitflags = "1.2.1"
once_cell = "1.5.2"
rand = "0.8.0"
downcast-rs = "1.2.0"

serde = { version = "1.0.120", features = ["derive"] }
ron = "0.6.4"
glsp = "0.2.0"
sdl2 = "0.34.3"

