[package]
name = "gui"
version = "0.1.0"
edition = "2018"

[features]
use-imgui = ["imgui-backends/sdl2", "imgui-backends/rokol"]

[dependencies]
rokol = { path = "../snow2d/crates/rokol/rokol", features = ["impl-gfx", "glcore33"] }
snow2d = { path = "../snow2d" }
igri = { path = "../snow2d/crates/igri/igri" }

rlcore = { path = "../rlcore" }
model = { path = "../model" }
view = { path = "../view" }

imgui-backends = { path = "../imgui-backends-rs", optional = true }

log = "0.4.14"
anyhow = "1.0.41"
thiserror = "1.0.25"
serde_json = "1.0.66"
serde = "1.0.127"
sdl2 = "0.34.5"
glam = { version = "0.17.3", features = ["bytemuck"] }
smallvec = "1.6.1"
downcast-rs = "1.2.0"

