[package]
name = "rlbox"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"

# exclude = [""]
# keywords = []
# license = "MIT"
# repository = "https://github.com/toyboot4e/snow_rl"
# description = ""

[dependencies]
rokol = { path = "../snow2d/rokol", features = ["glcore33"] }
snow2d = { path = "../snow2d" }

log = "0.4.11"
env_logger = "0.8.2"
anyhow = "1.0.33"
thiserror = "1.0.21"

image = "0.23.12"
glam = "0.11.2"
tiled = "0.9.3"

auto_ops = "0.1.0"
bitflags = "1.2.1"
once_cell = "1.5.2"
rand = "0.7.3"

