[package]
name = "rlbox"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"

# exclude = [""]
# keywords = []
# license = "MIT"
# repository = "https://github.com/toyboot4e/snow_rl"
# description = ""

[features]
use-imgui = ["imgui"]

[dependencies]
rokol = { path = "../snow2d/rokol/rokol", features = ["impl-gfx", "glcore33"] }
snow2d = { path = "../snow2d" }

log = "0.4.14"
env_logger = "0.8.4"
anyhow = "1.0.41"
thiserror = "1.0.25"

image = "0.23.14"
glam = "0.16.0"
tiled = "0.9.5"

auto_ops = "0.3.0"
bitflags = "1.2.1"
once_cell = "1.7.2"
rand = "0.8.3"
serde = "1.0.126"
downcast-rs = "1.2.0"
derivative = "2.2.0"
imgui = { version = "0.7.0", optional = true }

