[package]
name = "snow2d"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"

# exclude = [""]
# keywords = []
# license = "MIT"
# repository = "https://github.com/toyboot4e/snow_rl"
# description = ""

[dependencies]
sdl2 = "0.34.3"
rokol = { path = "rokol", features = ["glcore33", "impl-gfx", "sdl2", "fontstash"] }
xdl = { path = "xdl", features = ["sdl2", "serde"] }

soloud = "0.3.1"
image = "0.23.12"
glam = "0.11.2"

snow2d_macros = { path = "snow2d_macros" }

anyhow = "1.0.33"
ron = "0.6.4"
serde = "1.0.123"
thunderdome = { git = "https://github.com/toyboot4e/thunderdome", branch = "snowrl" }

log = "0.4.11"
env_logger = "0.8.2"

auto_ops = "0.1.0"
arraytools = "0.1.5"
bitflags = "1.2.1"
delegate = "0.5.1"
derivative = "2.2.0"
downcast-rs = "1.2.0"
dyn-clone = "1.0.4"
enum_dispatch = "0.3.5"
hackfn = "0.1.4"
indoc = "1.0.3"
inherent = "0.1.6"
inline_tweak = "1.0.8"
once_cell = "1.7.2"
thiserror = "1.0.21"
trait_enum = "0.5.0"
bytemuck = "1.5.1"
arraymap = "0.1.1"

