[package]
name = "view"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"

[features]

[dependencies]
rokol = { path = "../snow2d/crates/rokol/rokol", features = ["impl-gfx", "glcore33"] }
snow2d = { path = "../snow2d" }
igri = { path = "../snow2d/crates/igri/igri" }

rlcore = { path = "../rlcore" }
model = { path = "../model" }

log = "0.4.14"
anyhow = "1.0.41"

image = "0.23.14"
glam = "0.16.0"
tiled = "0.9.5"

auto_ops = "0.3.0"
bitflags = "1.2.1"
once_cell = "1.7.2"
serde = "1.0.126"
downcast-rs = "1.2.0"
derivative = "2.2.0"

